[package]
name = "cl-dns-rs"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = { version = "1.0.145" }
reqwest = { version = "0.12.24", features = ["blocking", "json"] }
log = { version = "0.4.28"}
env_logger = { version = "0.11.8"}
dotenv = {version = "0.15.0"}
